[gd_scene load_steps=33 format=3 uid="uid://dm1bv1mr1mg7t"]

[ext_resource type="Texture2D" uid="uid://b27iycarrg5t2" path="res://board/sprites/board1.png" id="1_6cnua"]
[ext_resource type="Script" path="res://board/board.gd" id="1_x036s"]
[ext_resource type="Texture2D" uid="uid://jofrcpaakt3a" path="res://board/sprites/board2.png" id="2_yax24"]
[ext_resource type="Texture2D" uid="uid://cp21cc4l0bi3w" path="res://board/sprites/board3.png" id="3_jc243"]
[ext_resource type="Texture2D" uid="uid://n72b5agv2obj" path="res://board/sprites/board4.png" id="4_qrmw1"]
[ext_resource type="Texture2D" uid="uid://bgv60j8nk6pd0" path="res://board/sprites/board5.png" id="5_ts2ma"]
[ext_resource type="Texture2D" uid="uid://ontqs8ca2pbd" path="res://board/sprites/board6.png" id="6_w0e18"]
[ext_resource type="Script" path="res://board/bot.gd" id="8_ckhlr"]
[ext_resource type="Script" path="res://board/top.gd" id="9_rscx2"]
[ext_resource type="Script" path="res://board/buttons.gd" id="10_dgy4a"]
[ext_resource type="Texture2D" uid="uid://yngloxkydw5r" path="res://resources/buttons/refresh/ref_1.png" id="11_jad7g"]
[ext_resource type="Texture2D" uid="uid://bch38np5abe5a" path="res://resources/buttons/refresh/refPressed_1.png" id="12_6i02q"]
[ext_resource type="Texture2D" uid="uid://c5e84squw6xk" path="res://resources/buttons/menu/menu_1.png" id="12_v8scj"]
[ext_resource type="FontFile" uid="uid://cfachjkk2umhy" path="res://resources/fonts/Helvetica Black Condensed.otf" id="13_1e1oj"]
[ext_resource type="Texture2D" uid="uid://buvkfxac3dta3" path="res://resources/buttons/menu/menuPressed_1.png" id="14_soiem"]
[ext_resource type="Texture2D" uid="uid://b5ohnx43d57xa" path="res://resources/buttons/freeze/freeze_1.png" id="15_3qi7y"]
[ext_resource type="Texture2D" uid="uid://dtpnyobolb7uy" path="res://resources/buttons/battle/battle_1.png" id="15_r85dt"]
[ext_resource type="Texture2D" uid="uid://5mlp6j46ur4k" path="res://resources/buttons/battle/battlePressed_1.png" id="16_67s0v"]
[ext_resource type="Texture2D" uid="uid://duka5lycxmlb7" path="res://resources/buttons/freeze/freezePressed_1.png" id="16_jmc37"]
[ext_resource type="Texture2D" uid="uid://ojl6bg76oa1s" path="res://resources/buttons/freeze/freeze_icon.png" id="17_pxal2"]
[ext_resource type="Texture2D" uid="uid://dw1skt21mlmou" path="res://resources/buttons/freeze/trash_icon.png" id="18_3eqqv"]
[ext_resource type="Script" path="res://sfx.gd" id="21_16f1h"]
[ext_resource type="PackedScene" uid="uid://cnfocj3xrb6ul" path="res://resources/particles/hit_particle.tscn" id="22_h1vy3"]
[ext_resource type="FontFile" uid="uid://ckxk3elimfey3" path="res://resources/fonts/Kaph-Regular.otf" id="23_i5me6"]
[ext_resource type="Script" path="res://board/labels.gd" id="23_s1iaf"]
[ext_resource type="Script" path="res://board/animations.gd" id="25_p2xi5"]
[ext_resource type="PackedScene" uid="uid://ccd6sevfyp7qv" path="res://animations/won.tscn" id="27_0lvjr"]
[ext_resource type="PackedScene" uid="uid://clk22cgap8uq8" path="res://resources/sfx/sfx_main.tscn" id="27_738g5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fha0f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6cnua")
}, {
"duration": 1.0,
"texture": ExtResource("2_yax24")
}, {
"duration": 1.0,
"texture": ExtResource("3_jc243")
}, {
"duration": 1.0,
"texture": ExtResource("4_qrmw1")
}, {
"duration": 1.0,
"texture": ExtResource("5_ts2ma")
}, {
"duration": 1.0,
"texture": ExtResource("6_w0e18")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjuc7"]
size = Vector2(36, 94)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1l1pc"]
size = Vector2(60, 57.5)

[sub_resource type="Gradient" id="Gradient_hnqm5"]
offsets = PackedFloat32Array(0.150943, 0.773585)
colors = PackedColorArray(0.772549, 0.505882, 0.160784, 1, 0.654902, 0.243137, 0.172549, 0.435294)

[node name="board" type="Node2D"]
script = ExtResource("1_x036s")

[node name="background" type="AnimatedSprite2D" parent="."]
z_index = -2
sprite_frames = SubResource("SpriteFrames_fha0f")

[node name="top_board" type="Node2D" parent="."]

[node name="bot" type="Node2D" parent="."]
script = ExtResource("8_ckhlr")

[node name="mark_0" type="Marker2D" parent="bot"]
position = Vector2(-262, 80)

[node name="bot_area_0" type="Area2D" parent="bot/mark_0" groups=["board_area", "bot_0", "bot_area"]]

[node name="ColorRect" type="ColorRect" parent="bot/mark_0/bot_area_0"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="bot/mark_0/bot_area_0/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bot/mark_0/bot_area_0"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="mark_1" type="Marker2D" parent="bot"]
position = Vector2(-206, 80)

[node name="bot_area_1" type="Area2D" parent="bot/mark_1" groups=["board_area", "bot_1", "bot_area"]]

[node name="ColorRect" type="ColorRect" parent="bot/mark_1/bot_area_1"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="bot/mark_1/bot_area_1/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="bot/mark_1/bot_area_1"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="mark_2" type="Marker2D" parent="bot"]
position = Vector2(-146, 80)

[node name="bot_area_2" type="Area2D" parent="bot/mark_2" groups=["board_area", "bot_2", "bot_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bot/mark_2/bot_area_2"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="bot/mark_2/bot_area_2"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="bot/mark_2/bot_area_2/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_3" type="Marker2D" parent="bot"]
position = Vector2(-86, 80)

[node name="bot_area_3" type="Area2D" parent="bot/mark_3" groups=["board_area", "bot_3", "bot_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bot/mark_3/bot_area_3"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="bot/mark_3/bot_area_3"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="bot/mark_3/bot_area_3/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_4" type="Marker2D" parent="bot"]
position = Vector2(-26, 80)

[node name="bot_area_4" type="Area2D" parent="bot/mark_4" groups=["board_area", "bot_4", "bot_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bot/mark_4/bot_area_4"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="bot/mark_4/bot_area_4"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="bot/mark_4/bot_area_4/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_5" type="Marker2D" parent="bot"]
position = Vector2(34, 80)

[node name="bot_area_5" type="Area2D" parent="bot/mark_5" groups=["board_area", "bot_5", "bot_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bot/mark_5/bot_area_5"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="bot/mark_5/bot_area_5"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="bot/mark_5/bot_area_5/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_6" type="Marker2D" parent="bot"]
position = Vector2(94, 80)

[node name="bot_area_6" type="Area2D" parent="bot/mark_6" groups=["board_area", "bot_6", "bot_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bot/mark_6/bot_area_6"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="bot/mark_6/bot_area_6"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="bot/mark_6/bot_area_6/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_spawn" type="Marker2D" parent="bot"]
position = Vector2(-457, 136)

[node name="mark_leave" type="Marker2D" parent="bot"]
position = Vector2(425, 147)

[node name="battle" type="Node2D" parent="."]

[node name="trash_area" type="Area2D" parent="." groups=["trash_area"]]
position = Vector2(137, -1)
scale = Vector2(0.8, 0.8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="trash_area"]
shape = SubResource("RectangleShape2D_1l1pc")

[node name="buttons" type="Node2D" parent="."]
script = ExtResource("10_dgy4a")

[node name="refresh" type="TextureButton" parent="buttons"]
offset_left = -314.0
offset_top = -62.0
offset_right = -252.0
offset_bottom = -1.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("11_jad7g")
texture_pressed = ExtResource("12_6i02q")

[node name="refresh_stats" type="Label" parent="buttons/refresh"]
layout_mode = 0
offset_left = 27.5
offset_top = 13.75
offset_right = 37.5
offset_bottom = 39.75
scale = Vector2(1.2, 1.2)
theme_override_colors/font_color = Color(0.2, 0.160784, 0.137255, 1)
text = "9"
horizontal_alignment = 1

[node name="rereoll_label" type="Label" parent="buttons/refresh"]
layout_mode = 0
offset_left = 65.0
offset_top = 11.25
offset_right = 116.0
offset_bottom = 63.25
theme_override_colors/font_color = Color(0.705882, 0.627451, 0.576471, 1)
theme_override_fonts/font = ExtResource("13_1e1oj")
text = "re-roll
letters"
horizontal_alignment = 1

[node name="menu" type="TextureButton" parent="buttons"]
offset_left = -319.0
offset_top = -178.0
offset_right = -182.0
offset_bottom = -117.0
scale = Vector2(0.85, 0.85)
texture_normal = ExtResource("12_v8scj")
texture_pressed = ExtResource("14_soiem")

[node name="Label" type="Label" parent="buttons/menu"]
layout_mode = 0
offset_left = 14.1176
offset_top = 14.1176
offset_right = 115.118
offset_bottom = 44.1176
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("13_1e1oj")
text = "MENU"
horizontal_alignment = 1

[node name="battle" type="TextureButton" parent="buttons"]
modulate = Color(0.45098, 0.156863, 0.12549, 1)
offset_left = 190.0
offset_top = -26.0
offset_right = 327.0
offset_bottom = 35.0
scale = Vector2(0.85, 0.85)
texture_normal = ExtResource("15_r85dt")
texture_pressed = ExtResource("16_67s0v")

[node name="instruct_label" type="Label" parent="buttons"]
visible = false
offset_left = -160.0
offset_top = -84.0
offset_right = 135.0
offset_bottom = -54.0
pivot_offset = Vector2(153, 11)
theme_override_fonts/font = ExtResource("13_1e1oj")
theme_override_font_sizes/font_size = 24
text = "Make proper word up here"
horizontal_alignment = 1

[node name="battle_label" type="Label" parent="buttons"]
offset_left = 199.0
offset_top = -10.0
offset_right = 300.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("13_1e1oj")
text = "BATTLE"
horizontal_alignment = 1

[node name="freeze" type="TextureButton" parent="buttons"]
offset_left = 112.0
offset_top = -25.0
offset_right = 174.0
offset_bottom = 36.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("15_3qi7y")
texture_pressed = ExtResource("16_jmc37")

[node name="freeze_icon" type="Sprite2D" parent="buttons/freeze"]
visible = false
position = Vector2(31.25, 31.25)
texture = ExtResource("17_pxal2")

[node name="trash_icon" type="Sprite2D" parent="buttons/freeze"]
visible = false
position = Vector2(31.25, 31.25)
texture = ExtResource("18_3eqqv")

[node name="mid_marker" type="Marker2D" parent="."]
position = Vector2(-12, -3)

[node name="top_marker" type="Marker2D" parent="mid_marker"]
position = Vector2(0, -300)

[node name="bot_marker" type="Marker2D" parent="mid_marker"]
position = Vector2(0, 300)

[node name="hit_particle" parent="mid_marker" instance=ExtResource("22_h1vy3")]

[node name="battle_timer" type="Timer" parent="."]

[node name="read_timer" type="Timer" parent="battle_timer"]
wait_time = 3.0

[node name="ani_timer" type="Timer" parent="."]
autostart = true

[node name="sfx" type="Node2D" parent="."]
script = ExtResource("21_16f1h")

[node name="burner_particles" type="CPUParticles2D" parent="sfx"]
visible = false
position = Vector2(351, 110)
amount = 156
emission_shape = 3
emission_rect_extents = Vector2(48, 80)
gravity = Vector2(-175, -245)
scale_amount_min = 32.0
scale_amount_max = 32.0
color_ramp = SubResource("Gradient_hnqm5")

[node name="burner_timer" type="Timer" parent="sfx/burner_particles"]

[node name="labels" type="Node2D" parent="."]
script = ExtResource("23_s1iaf")

[node name="top_label" type="Label" parent="labels"]
offset_left = 150.0
offset_top = -56.0
offset_right = 200.0
offset_bottom = -33.0
theme_override_fonts/font = ExtResource("13_1e1oj")
text = "top row"

[node name="top_name" type="Label" parent="labels/top_label"]
layout_mode = 0
offset_left = 68.0
offset_top = -2.0
offset_right = 165.0
offset_bottom = 21.0
theme_override_fonts/font = ExtResource("23_i5me6")
text = "aaa"

[node name="bot_label" type="Label" parent="labels"]
offset_left = 150.0
offset_top = 38.0
offset_right = 200.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("13_1e1oj")
text = "bot row"

[node name="bot_name" type="Label" parent="labels/bot_label"]
layout_mode = 0
offset_left = 67.0
offset_top = -3.0
offset_right = 121.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("23_i5me6")
text = "Shop"

[node name="animations" type="Node2D" parent="."]
top_level = true
script = ExtResource("25_p2xi5")

[node name="won" parent="animations" instance=ExtResource("27_0lvjr")]

[node name="lost" type="Node2D" parent="animations"]
visible = false

[node name="background_particles" type="CPUParticles2D" parent="animations/lost"]
emitting = false
amount = 156
emission_shape = 3
emission_rect_extents = Vector2(70, 40)
gravity = Vector2(0, 0)
scale_amount_min = 55.0
scale_amount_max = 75.0
color = Color(0.933333, 0.729412, 0.45098, 1)

[node name="Label" type="Label" parent="animations/lost"]
offset_left = -182.0
offset_top = -21.0
offset_right = 181.0
offset_bottom = 23.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("23_i5me6")
text = "YOU LOST! 
:("
horizontal_alignment = 1

[node name="tie" type="Node2D" parent="animations"]
visible = false

[node name="background_particles" type="CPUParticles2D" parent="animations/tie"]
emitting = false
amount = 156
emission_shape = 3
emission_rect_extents = Vector2(70, 40)
gravity = Vector2(0, 0)
scale_amount_min = 55.0
scale_amount_max = 75.0
color = Color(0.933333, 0.729412, 0.45098, 1)

[node name="Label" type="Label" parent="animations/tie"]
offset_left = -184.0
offset_top = -11.0
offset_right = 179.0
offset_bottom = 33.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("23_i5me6")
text = "It was a tie"
horizontal_alignment = 1

[node name="fight" type="Node2D" parent="animations"]
visible = false

[node name="background_particles" type="CPUParticles2D" parent="animations/fight"]
position = Vector2(-3, -12)
emitting = false
amount = 156
emission_shape = 3
emission_rect_extents = Vector2(70, 40)
gravity = Vector2(0, 0)
scale_amount_min = 50.0
scale_amount_max = 50.0
color = Color(0.654902, 0.243137, 0.172549, 1)

[node name="Label" type="Label" parent="animations/fight"]
offset_left = -184.0
offset_top = -11.0
offset_right = 179.0
offset_bottom = 33.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.113725, 0.0862745, 0.0745098, 1)
theme_override_fonts/font = ExtResource("23_i5me6")
text = "FIGHT!"
horizontal_alignment = 1

[node name="sfx_main" parent="." instance=ExtResource("27_738g5")]

[node name="top" type="Node2D" parent="."]
position = Vector2(150, -200)
script = ExtResource("9_rscx2")

[node name="mark_0" type="Marker2D" parent="top"]
position = Vector2(-262, 80)

[node name="top_area_0" type="Area2D" parent="top/mark_0" groups=["board_area", "top_0", "top_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top/mark_0/top_area_0"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="top/mark_0/top_area_0"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="top/mark_0/top_area_0/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_1" type="Marker2D" parent="top"]
position = Vector2(-206, 80)

[node name="top_area_1" type="Area2D" parent="top/mark_1" groups=["board_area", "top_1", "top_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top/mark_1/top_area_1"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="top/mark_1/top_area_1"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="top/mark_1/top_area_1/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_2" type="Marker2D" parent="top"]
position = Vector2(-146, 80)

[node name="top_area_2" type="Area2D" parent="top/mark_2" groups=["board_area", "top_2", "top_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top/mark_2/top_area_2"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="top/mark_2/top_area_2"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="top/mark_2/top_area_2/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_3" type="Marker2D" parent="top"]
position = Vector2(-86, 80)

[node name="top_area_3" type="Area2D" parent="top/mark_3" groups=["board_area", "top_3", "top_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top/mark_3/top_area_3"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="top/mark_3/top_area_3"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="top/mark_3/top_area_3/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_4" type="Marker2D" parent="top"]
position = Vector2(-26, 80)

[node name="top_area_4" type="Area2D" parent="top/mark_4" groups=["board_area", "top_4", "top_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top/mark_4/top_area_4"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="top/mark_4/top_area_4"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="top/mark_4/top_area_4/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_5" type="Marker2D" parent="top"]
position = Vector2(34, 80)

[node name="top_area_5" type="Area2D" parent="top/mark_5" groups=["board_area", "top_5", "top_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top/mark_5/top_area_5"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="top/mark_5/top_area_5"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="top/mark_5/top_area_5/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_6" type="Marker2D" parent="top"]
position = Vector2(94, 80)

[node name="top_area_6" type="Area2D" parent="top/mark_6" groups=["board_area", "top_6", "top_area"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="top/mark_6/top_area_6"]
shape = SubResource("RectangleShape2D_rjuc7")

[node name="ColorRect" type="ColorRect" parent="top/mark_6/top_area_6"]
z_index = -1
offset_left = -18.0
offset_top = -22.0
offset_right = 18.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.901961, 0.584314, 0.321569, 1)

[node name="ColorRect" type="ColorRect" parent="top/mark_6/top_area_6/ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = -4.0
offset_right = 34.0
offset_bottom = 41.0
mouse_filter = 2
color = Color(0.113725, 0.0862745, 0.0745098, 1)

[node name="mark_spawn" type="Marker2D" parent="top"]
position = Vector2(-588, 136)

[node name="mark_leave" type="Marker2D" parent="top"]
position = Vector2(425, 147)

[connection signal="input_event" from="bot/mark_0/bot_area_0" to="bot" method="_on_bot_area_0_input_event"]
[connection signal="input_event" from="bot/mark_1/bot_area_1" to="bot" method="_on_bot_area_1_input_event"]
[connection signal="input_event" from="bot/mark_2/bot_area_2" to="bot" method="_on_bot_area_2_input_event"]
[connection signal="input_event" from="bot/mark_3/bot_area_3" to="bot" method="_on_bot_area_3_input_event"]
[connection signal="input_event" from="bot/mark_4/bot_area_4" to="bot" method="_on_bot_area_4_input_event"]
[connection signal="input_event" from="bot/mark_5/bot_area_5" to="bot" method="_on_bot_area_5_input_event"]
[connection signal="input_event" from="bot/mark_6/bot_area_6" to="bot" method="_on_bot_area_6_input_event"]
[connection signal="pressed" from="buttons/refresh" to="buttons" method="_on_refresh_pressed"]
[connection signal="pressed" from="buttons/menu" to="buttons" method="_on_menu_pressed"]
[connection signal="pressed" from="buttons/battle" to="buttons" method="_on_battle_pressed"]
[connection signal="pressed" from="buttons/freeze" to="buttons" method="_on_freeze_pressed"]
[connection signal="timeout" from="ani_timer" to="." method="_on_ani_timer_timeout"]
[connection signal="timeout" from="ani_timer" to="buttons" method="_on_ani_timer_timeout"]
[connection signal="input_event" from="top/mark_0/top_area_0" to="top" method="_on_top_area_0_input_event"]
[connection signal="input_event" from="top/mark_1/top_area_1" to="top" method="_on_top_area_1_input_event"]
[connection signal="input_event" from="top/mark_2/top_area_2" to="top" method="_on_top_area_2_input_event"]
[connection signal="input_event" from="top/mark_3/top_area_3" to="top" method="_on_top_area_3_input_event"]
[connection signal="input_event" from="top/mark_4/top_area_4" to="top" method="_on_top_area_4_input_event"]
[connection signal="input_event" from="top/mark_5/top_area_5" to="top" method="_on_top_area_5_input_event"]
[connection signal="input_event" from="top/mark_6/top_area_6" to="top" method="_on_top_area_6_input_event"]
